// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`it accepts a new theory 1`] = `
[
  {
    "p2": [],
    "p3": [],
    "p4": [],
    "self": [
      [
        1,
        3,
        false,
      ],
    ],
  },
]
`;

exports[`it verifies theories 1`] = `[]`;

exports[`it verifies theories 2`] = `
[
  {
    "p2": [],
    "p3": [],
    "p4": [],
    "self": [
      [
        1,
        1,
        false,
      ],
    ],
  },
]
`;

exports[`it verifies theories 3`] = `
[
  {
    "p2": [],
    "p3": [],
    "p4": [],
    "self": [
      [
        1,
        1,
        false,
      ],
    ],
  },
  {
    "p2": [
      [
        1,
        3,
        false,
      ],
    ],
    "p3": [],
    "p4": [],
    "self": [],
  },
]
`;

exports[`it verifies theories 4`] = `
[
  {
    "p2": [],
    "p3": [],
    "p4": [],
    "self": [
      [
        1,
        1,
        true,
      ],
    ],
  },
  {
    "p2": [
      [
        1,
        3,
        true,
      ],
    ],
    "p3": [],
    "p4": [],
    "self": [],
  },
  {
    "p2": [],
    "p3": [],
    "p4": [],
    "self": [],
  },
]
`;
